crates/formatter/tests/snapshots/snapshots__migrations__000495_ai_providers.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table if exists ai_provider_keys;
drop table if exists ai_providers;
drop type if exists ai_provider_type;
-- No-op for ALTER TYPE resource_type / api_key_scope ADD VALUE:
-- Postgres does not allow removing enum values safely.
