crates/formatter/tests/snapshots/snapshots__migrations__000496_chat_database_foundation.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop view if exists chats_expanded;
