crates/formatter/tests/snapshots/snapshots__migrations__000496_chat_database_foundation.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create view chats_expanded as
select
	c.id,
	c.owner_id,
	c.workspace_id,
	c.title,
	c.status,
	c.worker_id,
	c.started_at,
	c.heartbeat_at,
	c.created_at,
	c.updated_at,
	c.parent_chat_id,
	c.root_chat_id,
	c.last_model_config_id,
	c.archived,
	c.last_error,
	c.mode,
	c.mcp_server_ids,
	c.labels,
	c.build_id,
	c.agent_id,
	c.pin_order,
	c.last_read_message_id,
	c.last_injected_context,
	c.dynamic_tools,
	c.organization_id,
	c.plan_mode,
	c.client_type,
	c.last_turn_summary,
	owner.username as owner_username,
	owner.name as owner_name
from chats c join visible_users owner on owner.id = c.owner_id;
