crates/formatter/tests/snapshots/snapshots__migrations__000498_soft_delete_stale_workspace_agents.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- The backfill is not reversed: soft-deleted agents tied to stopped/deleted
-- builds are no longer referenced anywhere. Restoring deleted=FALSE would
-- only re-create the ambiguity the forward migration fixed.
