crates/formatter/tests/snapshots/snapshots__migrations__000498_soft_delete_stale_workspace_agents.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Soft-delete stale `workspace_agents` rows.
--
-- Before v2.33.0, the auth path `GetWorkspaceAgentByInstanceID :one` silently
-- picked the newest matching row, so stale rows from earlier builds were
-- harmless. After #24325 replaced that with a `:many` lookup that rejects
-- ambiguity with HTTP 409, the accumulation becomes a hard failure: any
-- workspace whose EC2 instance hosted more than one build can no longer
-- re-authenticate its agent.
--
-- This migration backfills the "at most one non-deleted agent per workspace
-- that is itself not deleted" invariant over existing data. Going forward:
--   - `wsbuilder.Builder.Build` maintains it per-build via
--     `SoftDeletePriorWorkspaceAgents`.
--   - `provisionerdserver.CompleteJob` and `wsbuilder` also call
--     `SoftDeleteWorkspaceAgentsByWorkspaceID` when a workspace itself is
--     soft-deleted, so the table doesn't retain orphaned-but-non-deleted
--     agents referencing a deleted workspace.
--
-- Backfill scope:
--   1. Every agent belonging to a soft-deleted workspace -> deleted = TRUE.
--   2. For each still-live workspace, keep only agents belonging to the
--      current (highest build_number) build; soft-delete earlier builds'
--      agents.
--
-- Related:
--   #24325 (feature that regressed the behavior)
--   #24973 (partial fix, pool starvation)
--   #25031 (partial fix, handler cleanup + deleted-workspace filter)
--   #25155 (bug report)

-- 1. Soft-delete all agents on workspaces that are themselves deleted.
update workspace_agents
set deleted = true
where
	id in (
		select wa.id
		from workspace_agents wa
			join workspace_resources wr on wr.id = wa.resource_id
			join workspace_builds wb on wb.job_id = wr.job_id
			join workspaces w on w.id = wb.workspace_id
		where wa.deleted = false and w.deleted = true
	);

-- 2. For every live workspace, soft-delete agents not tied to the latest build.
with
	latest_builds as (
		select distinct on (workspace_id) id, workspace_id
		from workspace_builds
		order by workspace_id, build_number desc
	)
update workspace_agents
set deleted = true
where
	id in (
		select wa.id
		from workspace_agents wa
			join workspace_resources wr on wr.id = wa.resource_id
			join workspace_builds wb on wb.job_id = wr.job_id
			join workspaces w on w.id = wb.workspace_id
			left join latest_builds lb on lb.workspace_id = wb.workspace_id
		where
			wa.deleted = false
			and w.deleted = false
			and (lb.id is null or wb.id <> lb.id)
	);
