crates/formatter/tests/snapshots/snapshots__migrations__000499_ai_provider_type_chatd_values.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- No-op: the up recreates ai_provider_type with a wider value set, but the
-- down does not narrow it back. Narrowing would drop rows that already use the
-- new values, and 000495_ai_providers.down.sql drops the type wholesale when
-- migrating all the way down.
