crates/formatter/tests/snapshots/snapshots__migrations__000500_audit_group_ai_budget_resource_type.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Postgres does not support removing enum values.
